--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-#spring.datasource.url=jdbc:postgresql://dpg-ci89s76nqql0ld9pdgf0-a/practia_s?user=practia_s_user&password=AaUEoBcdmLJKiaZ6VPyFZ3RvKCBAx1he&sslmode=require
 
+# HOSTNAME + DATABASE + USER + PASSWORD + &sslmode=require
+spring.datasource.url=jdbc:postgresql://dpg-ci8agnmnqql0ld9vsidg-a/practia_s?user=practia_s_user&password=AaUEoBcdmLJKiaZ6VPyFZ3RvKCBAx1he&sslmode=require
 
-#spring.datasource.url=jdbc:postgresql://dpg-ci8agnmnqql0ld9vsidg-a.oregon-postgres.render.com/practia_s?user=practia_s_user&password=AaUEoBcdmLJKiaZ6VPyFZ3RvKCBAx1he&sslmode=require
-
-#postgres://pgdbidat_user:lxucvBMSCla8G34yo19cmvjv7lmhfOz2@dpg-ci89s76nqql0ld9pdgf0-a/pgdbidat_j5t6
-
-#spring.datasource.username=springuser
-#spring.datasource.password=ThePassword
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# pg driver
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-
 spring.jpa.show-sql: false
